--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-spring.datasource.url=jdbc:h2:mem:biblioteca   # banco in-memory
+# Configurações do banco H2 em memória
+spring.datasource.url=jdbc:h2:mem:biblioteca
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect
+
+# Dialeto do Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar SQL no console (opcional, útil pra debug)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Ativar console web do H2
 spring.h2.console.enabled=true
